<?xml version="1.0"?>
<package>
  <name>crazyflie</name>
  <version>0.1.0</version>
  <description>This package contains drivers and controllers for the Crazyflie nano quadcopter from BitCraze, packaged as a library for other ROS nodes.</description>

  <url type="website">https://github.com/mchenryc/crazyflie_client_py</url>
  <license>GPL</license>

  <maintainer email="mchenryc@todo.todo">mchenryc</maintainer>


  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!-- Use test_depend for packages you need only for testing: -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>cfclient</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>cfclient</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
